# CIS520_HW4

./: README.md
3way-mpi/: CMakeLists.txt  MPI_C  Makefile  mass_sbatch.sh  mpi_sbatch.sh  openmpi.c  perf.txt  test.txt  testbatch.sh  time.csv  time.txt
3way-mpi/results/: time100k.csv  time10k.csv
3way-mpi/src/: mpi.c
hw4/3way-openmp/: .gitignore  Makefile  README.md  custom_log.txt  gather.sh  openmpmech.c  openmpmechNOMMAP.c  openmpmechV0.c  openmpmechV1.c  openmpmechV2.c  openmpmechV3.c  quick_run.sh  results_summary.csv  run_openmp.sh
hw4/3way-openmp/lines_1M/: Makefile
hw4/3way-openmp/lines_1M/1core/thread1/: 1c1topenmp.sh  1c1tperf.sh  openmpmech.c
hw4/3way-openmp/lines_1M/1core/thread2/: openmpmech.c  time.csv  time.txt
hw4/3way-openmp/quick_results/V1/threads_1/: custom_log.txt
hw4/3way-openmp/quick_results/V1/threads_16/: custom_log.txt
hw4/3way-openmp/quick_results/V1/threads_2/: custom_log.txt
hw4/3way-pthread/: max_char  perf_data.csv  perf_record.data  perf_report.txt  perf_stat_output.txt  pthreadmech.c  res_pthread.out  run_pthread.sh  slurm-21454786.out  test.sh
hw4/3way-pthread/100k data/: 100k16c.xlsx  100k1c.xlsx  100k2c.xlsx  100k4c.xlsx  100k8c.xlsx
hw4/3way-pthread/10k data/: 10k16c.xlsx  10k1c.xlsx  10k2c.xlsx  10k4c.xlsx  10k8c.xlsx
hw4/3way-pthread/1M data/: 1M16c.xlsx  1M1c.xlsx  1M2c.xlsx  1M4c.xlsx  1M8c.xlsx
hw4/3way-pthread/graphs/: 100kgraph.xlsx  10kgraph.xlsx  1Mgraph.xlsx
hw4/3way-pthread/lines_100k/: Makefile
hw4/quick_results/V1/lines_1000000_threads_2/: perf_stat_summary.txt
(+142 files in other folders)
